# OxCache

./: .dir-locals.el  .gitignore  .gitmodules  Cargo.toml  README.md  cortes.server.block.chunk.toml  cortes.server.block.promo.toml  cortes.server.block.toml  cortes.server.zns.chunk.toml  cortes.server.zns.promo.toml  cortes.server.zns.toml  d.diff  example.server.toml  generate_throughput_stats.py  github_runner.server.toml  local.server.toml  main.py  nvme-emulated.md  nvme-loop.json.example  pyproject.toml  qemu-zns-device.sh  qemu.block.promo.toml  qemu.block.toml  qemu.zns.promo.toml  qemu.zns.toml  rsync_and_compile.sh
.github/workflows/: rust.yml
docker/: docker-compose.yml  prometheus.yml
docs/: EVICTION.md  METRICS.md  PROFILING.md  TEST_ENV.md  TOKIO_DEBUGGING.md  WORKLOADS.md  nvme-emulated.md
eval/: README.md  analyze_outliers.py  average_pidstat.py  boxplot-graphs.py  boxplot-latency.py  boxplot.py  boxplot_graphs.py  boxplot_wt.py  cache_generator.py  consolidate_metrics.py  create_test_data.py  create_wt_test_data.py  data_cache.py  distribution_comparison_boxplots.py  distribution_comparison_ecdfs.py  ecdf_wt.py  generate_all_plots.sh  generate_all_plots_wt.sh  generate_gc_plots.sh  generate_latency_stats.py  generate_latex_appendix.py  generate_pidstat_latex.sh  generate_tables.py  hitratio_horizontal_bars.py  hitratio_horizontal_bars_combined.py  hitratio_horizontal_bars_wt.py  latency_statistics.py  latency_table.py  latency_table_matrix.py  old-boxplot-graphs.py  parse_pidstat.py  plot_hitratio.py  plot_latency.py  plot_latency_smoothed.py  plot_throughput.py  split_data.py  split_data_fast.py  test_parse_pidstat.py  test_pidstat_data.txt
eval/remotetransfer/: REMOTE_TRANSFER_EVAL.md  populate.py  pulltest.py
libnvme-sys/: Cargo.toml  README.md  build.rs  build.sh
libnvme-sys/src/: lib.rs  libnvme_wrapper.c  libnvme_wrapper.h
nvme/: Cargo.toml
nvme/src/: info.rs  lib.rs  ops.rs  types.rs  util.rs
oxcache/: Cargo.toml
oxcache/src/: cli.rs  device.rs  eviction.rs  eviction_metrics.rs  lib.rs  main.rs  metrics.rs  readerpool.rs  remote.rs  request.rs  server.rs  util.rs  writerpool.rs  zone_list.rs
oxcache/src/cache/: bucket.rs  mod.rs
oxcache/src/zone_state/: chunk_queue.rs  mod.rs  zone_list.md  zone_list.rs  zone_priority_queue.rs
oxcache/tests/: eval_client.rs  integration_tests.rs  mock_device.rs  testing.md
scripts/: precondition-nvme1n1.sh  run_cpu_bench.sh  run_cpu_bench_evict.sh  run_cpu_bench_spc.sh  run_workloads.sh  spcconfigspace.block.sh  spcconfigspace.sh  spcconfigspace.zns.sh
(+2 files in other folders)
