[package]
name = "oxcache"
version = "0.1.0"
edition = "2024"

[dependencies]
libnvme-sys = { path = "../libnvme-sys" }
nvme = { path = "../nvme" }
dashmap = "7.0.0-rc2"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
toml = "0.8.22"
tokio = { version = "1.45.1", features = ["net", "fs", "io-util", "rt", "rt-multi-thread", "macros", "time", "signal", "sync"] }
aws-sdk-s3 = "1.90.0"
aws-config = "1.6.3"
bincode = { version = "2.0.1", features = ["alloc", "serde"] }
tokio-util = { version = "0.7.15" }
bytes = "1.10.1"
futures = "0.3.31"
async-trait = "0.1.88"
rand = "0.9.1"
rand_pcg = "0.9.0"
flume = "0.11.1"
