[package]
name = "oxcache"
version = "0.1.0"
edition = "2024"

[dependencies]
libnvme-sys = { path = "../libnvme-sys" }
nvme = { path = "../nvme" }
dashmap = "7.0.0-rc2"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
toml = "0.8.22"
tokio = { version = "1.45.1", features = ["net", "fs", "io-util", "rt", "rt-multi-thread", "macros", "time", "signal", "sync", "tracing"] }
aws-sdk-s3 = "1.90.0"
aws-config = "1.6.3"
bincode = { version = "2.0.1", features = ["alloc", "serde"] }
tokio-util = { version = "0.7.15" }
bytes = { version = "1.10.1", features = ["serde"] }
futures = "0.3.31"
async-trait = "0.1.88"
rand = "0.9.1"
rand_pcg = "0.9.0"
flume = "0.11.1"
lru = "0.16.0"
ndarray = "0.16.1"
uuid = { version = "1.17.0", features = ["v4"] }
byteorder = "1.5.0"
once_cell = "1.21.3"
aligned-vec = "0.6.4"
console-subscriber = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
metrics-exporter-prometheus = "0.17.2"
axum = "0.6.20"
metrics = "0.24.2"
priority-queue = "2.5.0"
tracing-appender = "0.2.3"
tracing = "0.1.41"
chrono = "0.4.41"
libc = "0.2.175"

[[test]]
  name = "integration_tests"
  harness = false
